correcciones del servver